# infrastructure

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: dependency-review.yaml  dns-deploy.yaml  dns-dry-run.yaml  lint-ansible.yaml  lint.yaml
ansible/: .ansible-lint  ansible.cfg  playbook.yaml
ansible/inventory/: hosts.yaml
ansible/roles/common/tasks/: main.yaml
ansible/roles/docker/tasks/: main.yaml
dns/: production.yaml
dns/zones/aka.dog.zone/: infra-site.yaml
dns/zones/tailstory.dev.zone/: infra-docs.yaml  infra-dotforge.yaml  infra-wiki.yaml  mail-corp.yaml  microsoft-intune.yaml  root.yaml
